force-app/main/default/objects/Revenue_and_Profitability__c/Revenue_and_Profitability__c.object-meta.xml
<CustomObject>
    <description>Revenue and Profitability object will be fed with records from PMT (EN-927).</description>
    <label>Revenue and Profitability</label>
    <nameField>
        <label>Revenue and Profitability</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenues and Profitabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>