force-app/main/default/objects/Revenue_and_Profitability__c/fields/Avarage_Debit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Avarage_Debit_Balance__c</fullName>
    <description>Total lending products, US-4424</description>
    <label>Avarage Debit Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>