force-app/main/default/objects/Revenue_and_Profitability__c/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <externalId>true</externalId>
    <label>BPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>