force-app/main/default/objects/Revenue_and_Profitability__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>This is the name of the client in mention (EN-927).</description>
    <inlineHelpText>This is the name of the client in mention.</inlineHelpText>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenues and Profitabilities</relationshipLabel>
    <relationshipName>Revenues_and_Profitabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>