force-app/main/default/objects/Revenue_and_Profitability__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost reflects the bank&apos;s cost of managing the client (EN-927).</description>
    <inlineHelpText>Cost reflects the bank&apos;s cost of managing the client.</inlineHelpText>
    <label>Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>