force-app/main/default/objects/Revenue_and_Profitability__c/fields/Headline_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Headline_Earnings__c</fullName>
    <description>Headline Earnings reflect the revenue earned less any profits, losses, and interest expenses (NPAT) (EN-927).</description>
    <inlineHelpText>Headline Earnings reflect the revenue earned less any profits, losses, and interest expenses (NPAT).</inlineHelpText>
    <label>Headline Earnings</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>