force-app/main/default/objects/Revenue_and_Profitability__c/fields/Impairments__c.field-meta.xml
<CustomField>
    <fullName>Impairments__c</fullName>
    <description>This depicts the decrease in book value of an asset and/or debt written off, US-4424</description>
    <label>Impairments</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>