force-app/main/default/objects/Revenue_and_Profitability__c/fields/Net_Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Interest_Income__c</fullName>
    <description>Net Interest Income (NII) is the difference between interest earned and interest paid (EN-927).</description>
    <inlineHelpText>Net Interest Income (NII) is the difference between interest earned and interest paid.</inlineHelpText>
    <label>Net Interest Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>