force-app/main/default/objects/Revenue_and_Profitability__c/fields/Operating_Income__c.field-meta.xml
<CustomField>
    <fullName>Operating_Income__c</fullName>
    <description>Operating Income refers to the earnings before interest and taxes are deducted (EN-927).</description>
    <inlineHelpText>Operating Income refers to the earnings before interest and taxes are deducted.</inlineHelpText>
    <label>Operating Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>