force-app/main/default/objects/Revenue_and_Profitability__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Revenues and Profitabilities</relationshipLabel>
    <relationshipName>Revenues_and_Profitabilities</relationshipName>
    <type>Lookup</type>
</CustomField>