force-app/main/default/objects/Revenue_and_Profitability__c/fields/PMT_extract_date__c.field-meta.xml
<CustomField>
    <fullName>PMT_extract_date__c</fullName>
    <description>This field identifies the date when the data was extracted from PMT (EN-927).</description>
    <inlineHelpText>This field identifies the date when the data was extracted from PMT.</inlineHelpText>
    <label>PMT Extract Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>