force-app/main/default/objects/Revenue_and_Profitability__c/fields/Relationship_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Group_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The number used to group various client records belonging to a Hierarchy or Risk Group.</inlineHelpText>
    <label>Relationship Group Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>