force-app/main/default/objects/Revenue_and_Profitability__c/fields/Revenue_Current_YTD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Current_YTD__c</fullName>
    <description>This field indicates revenue current YTD (US-1199).</description>
    <inlineHelpText>This field indicates revenue current YTD.</inlineHelpText>
    <label>Revenue Current YTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>