force-app/main/default/objects/Revenue_and_Profitability__c/fields/Revenue_Last_Year_YTD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Last_Year_YTD__c</fullName>
    <description>This field indicates last year YTD revenue figures (US-1199).</description>
    <inlineHelpText>This field indicates last year YTD revenue figures.</inlineHelpText>
    <label>Revenue Last Year YTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>