force-app/main/default/objects/Revenue_and_Profitability__c/fields/ROE__c.field-meta.xml
<CustomField>
    <fullName>ROE__c</fullName>
    <description>Return on Equity (ROE) - a ratio in % that provides insight into the efficiency of a customer at generating profits from each unit of shareholder equity (EN-927).</description>
    <inlineHelpText>Return on Equity (ROE) - a ratio in % that provides insight into the efficiency of a customer at generating profits from each unit of shareholder equity.</inlineHelpText>
    <label>ROE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>