force-app/main/default/objects/Revenue_and_Profitability__c/fields/YTD_Avarage_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Avarage_Credit_Balance__c</fullName>
    <description>Total saving/investment balance held in current year, US-4424</description>
    <label>YTD Avarage Credit Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>