force-app/main/default/objects/Revenue_and_Profitability__c/fields/YTD_Avarage_Debit_Balance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Avarage_Debit_Balance__c</fullName>
    <description>Total lending products, in current year, US-4424</description>
    <label>YTD Avarage Debit Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>