force-app/main/default/objects/Revenue_and_Profitability__c/fields/YTD_Net_Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>YTD_Net_Interest_Income__c</fullName>
    <description>This is the difference between the interest earned through lending products vs the interest paid on investments, US-4424</description>
    <label>YTD Net Interest Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>