force-app/main/default/objects/Revenue_and_Profitability__c/fields/YTD_Non_Interest_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Non_Interest_Revenue__c</fullName>
    <description>This is a depiction of all the associated bank service fees that the client is charged, US-4424</description>
    <label>YTD Non Interest Revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>