force-app/main/default/objects/Revenue_and_Profitability__c/fields/YTD_Operating_Income__c.field-meta.xml
<CustomField>
    <fullName>YTD_Operating_Income__c</fullName>
    <description>The resulting profit that is deduced from the total revenue less all direct and indirect costs for current year period, US-4424</description>
    <label>YTD Operating Income</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>